objects/Partner_Application_Industry_Vertical__c.object
<CustomObject>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AGRICULTURE &amp; MINING</fullName>
                </value>
                <value>
                    <fullName>BUSINESS SERVICES</fullName>
                </value>
                <value>
                    <fullName>COMPUTERS &amp; ELECTRONICS</fullName>
                </value>
                <value>
                    <fullName>CONSUMER SERVICES</fullName>
                </value>
                <value>
                    <fullName>EDUCATION</fullName>
                </value>
                <value>
                    <fullName>ENERGY &amp; UTILITIES</fullName>
                </value>
                <value>
                    <fullName>FINANCIAL SERVICES</fullName>
                </value>
                <value>
                    <fullName>GOVERNMENT</fullName>
                </value>
                <value>
                    <fullName>HEALTHCARE, PHARMACEUTICALS, &amp; BIOTECH</fullName>
                </value>
                <value>
                    <fullName>MANUFACTURING</fullName>
                </value>
                <value>
                    <fullName>MEDIA &amp; ENTERTAINMENT</fullName>
                </value>
                <value>
                    <fullName>NON PROFIT</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>REAL ESTATE &amp; CONSTRUCTION</fullName>
                </value>
                <value>
                    <fullName>RETAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Application</label>
        <referenceTo>Partner_Application__c</referenceTo>
        <relationshipLabel>Partner_Application_Industry_Vertical</relationshipLabel>
        <relationshipName>Partner_Application_Industry_Vertical</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vertical_Markets__c</fullName>
        <label>Vertical Markets</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Animal &amp; Wildlife (Non Profit)</fullName>
                </value>
                <value>
                    <fullName>Arts &amp; Culture (Non Profit)</fullName>
                </value>
                <value>
                    <fullName>Automotive &amp; Transit</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Business/Professional Schools</fullName>
                </value>
                <value>
                    <fullName>Cable Television Providers</fullName>
                </value>
                <value>
                    <fullName>Call Center &amp; Outsourcing</fullName>
                </value>
                <value>
                    <fullName>Cellular, GSM &amp; Wireless</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Chemicals Petroleum &amp; Plastic</fullName>
                </value>
                <value>
                    <fullName>Colleges,Universities,and Professional Schools</fullName>
                </value>
                <value>
                    <fullName>Computer Hardware &amp; High Tech</fullName>
                </value>
                <value>
                    <fullName>Computer Software &amp; IT</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting, Business Services</fullName>
                </value>
                <value>
                    <fullName>Consumer Services</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Education (Non Profit)</fullName>
                </value>
                <value>
                    <fullName>Electronic Equipment &amp; Components</fullName>
                </value>
                <value>
                    <fullName>Elementary and secondary Schools</fullName>
                </value>
                <value>
                    <fullName>Employment Services</fullName>
                </value>
                <value>
                    <fullName>Engineering, Accounting and Research</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Environment (Non Profit)</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Freight/Rail/Water Transport</fullName>
                </value>
                <value>
                    <fullName>Government &amp; Public Admin</fullName>
                </value>
                <value>
                    <fullName>Health (Non Profit)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Application Industry Vertical</label>
    <nameField>
        <label>Partner Application Industry Vertical Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner_Application_Industry_Vertical</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>